base/idunion.web.frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: idunion-web-frontend
  namespace: idunion
spec:
  selector:
    app: idunion-web-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: frontend
